--- a/loadtest/skaffold.yaml
+++ b/loadtest/skaffold.yaml
@@ -44,6 +44,7 @@ deploy:
           backend.deployment.replicas: 1
           backend.tickRate: "100ms"
           redis.addr: "10.23.1.3:6379"
+          podMonitor.enabled: true
 portForward:
   - namespace: monitoring
     resourceType: Service
