--- a/loadtest/skaffold.yaml
+++ b/loadtest/skaffold.yaml
@@ -30,18 +30,18 @@ deploy:
           frontend.deployment.image: "{{.IMAGE_FULLY_QUALIFIED_frontend}}"
           backend.deployment.image: "{{.IMAGE_FULLY_QUALIFIED_backend}}"
         setValues:
-          frontend.deployment.replicas: 30
+          frontend.deployment.replicas: 1
           frontend.deployment.env:
             - name: REDIS_ADDR
               value: "10.23.1.3:6379"
-            - name: REDIS_ADDR_ASSIGNMENT
-              value: "10.23.1.11:6379"
-          backend.deployment.replicas: 3
+#            - name: REDIS_ADDR_ASSIGNMENT
+#              value: "10.23.1.11:6379"
+          backend.deployment.replicas: 1
           backend.deployment.env:
             - name: REDIS_ADDR
               value: "10.23.1.3:6379"
-            - name: REDIS_ADDR_ASSIGNMENT
-              value: "10.23.1.11:6379"
+#            - name: REDIS_ADDR_ASSIGNMENT
+#              value: "10.23.1.11:6379"
             - name: TICK_RATE
               value: "100ms"
           podMonitor.enabled: true
@@ -52,7 +52,7 @@ deploy:
           image: "{{.IMAGE_FULLY_QUALIFIED_attacker}}"
         setValues:
           rps: "50.0"
-          replicas: 80
+          replicas: 1
           frontendAddr: "minimatch-scaled-frontend.default.svc.cluster.local.:50504"
           matchTimeout: "10s"
 portForward:
