--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,4 +13,4 @@ jobs:
       - name: Get dependencies
         run: go mod download
       - name: Test
-        run: go test -v ./...
+        run: go test -v -race ./...
