--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,6 +23,7 @@ jobs:
       - uses: actions/setup-go@v4
         with:
           go-version-file: "./go.mod"
+          cache: false
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
