--- a/loadtest/skaffold.yaml
+++ b/loadtest/skaffold.yaml
@@ -33,17 +33,21 @@ deploy:
           frontend.deployment.replicas: 1
           frontend.deployment.env:
             - name: REDIS_ADDR
-              value: "10.23.1.3:6379"
-#            - name: REDIS_ADDR_ASSIGNMENT
-#              value: "10.23.1.11:6379"
+              value: "10.23.1.21:6379"
+            - name: REDIS_ADDR_ASSIGNMENT
+              value: "10.23.1.11:6379"
+            - name: REDIS_ADDR_READ_REPLICA
+              value: "10.23.1.20:6379"
           backend.deployment.replicas: 1
           backend.deployment.env:
             - name: REDIS_ADDR
-              value: "10.23.1.3:6379"
+              value: "10.23.1.21:6379"
             - name: OVERLAPPING_CHECK_REDIS_ADDR
               value: "10.23.1.11:6379"
-#            - name: REDIS_ADDR_ASSIGNMENT
-#              value: "10.23.1.11:6379"
+            - name: REDIS_ADDR_ASSIGNMENT
+              value: "10.23.1.11:6379"
+            - name: REDIS_ADDR_READ_REPLICA
+              value: "10.23.1.20:6379"
             - name: TICK_RATE
               value: "100ms"
           podMonitor.enabled: true
