--- a/loadtest/skaffold.yaml
+++ b/loadtest/skaffold.yaml
@@ -50,6 +50,8 @@ deploy:
               value: "10.23.1.20:6379"
             - name: TICK_RATE
               value: "100ms"
+            - name: TICKET_VALIDATION_ENABLED
+              value: "true"
           podMonitor.enabled: true
       - name: attacker
         chartPath: ./charts/attacker
