--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -9,6 +9,10 @@ plugins:
     out: gen
     opt:
       - paths=source_relative
+  - remote: buf.build/grpc/go:v1.5.1
+    out: gen
+    opt:
+      - paths=source_relative
   # dependencies
   - remote: buf.build/protocolbuffers/go:v1.34.2
     out: gen
