--- a/loadtest/skaffold.yaml
+++ b/loadtest/skaffold.yaml
@@ -38,6 +38,8 @@ deploy:
               value: "10.23.1.11:6379"
             - name: REDIS_ADDR_READ_REPLICA
               value: "10.23.1.20:6379"
+            - name: USE_GRPC
+              value: "false"
           backend.deployment.replicas: 1
           backend.deployment.env:
             - name: REDIS_ADDR
